--- a/app/src/main/res/layout/fragment_edit_menu.xml
+++ b/app/src/main/res/layout/fragment_edit_menu.xml
@@ -177,4 +177,36 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/noDataFoundInDb"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:padding="20dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/no_data_db" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tidak_ada_menu_apapun"
+            android:textAlignment="center"
+            android:textSize="26sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/anda_belum_menambahkan_menu_mohon_tambahkan_menu_terlebih_dahulu"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
 </LinearLayout>
