--- a/app/src/main/res/layout/item_menu_halaman_menu.xml
+++ b/app/src/main/res/layout/item_menu_halaman_menu.xml
@@ -17,9 +17,10 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imgMakanan"
                 android:layout_width="120dp"
                 android:layout_height="90dp"
-                android:layout_marginEnd="12dp"
+                android:layout_margin="4dp"
                 android:src="@drawable/ayam" />
 
             <LinearLayout
